# khiera-quest

./: Cargo.toml  concept.aseprite  justfile  rust-toolchain.toml  workspace.code-workspace
built-to-scale/: Cargo.toml
built-to-scale/gfx/: astronaut.aseprite  background.aseprite  background2.aseprite  bubble.aseprite  collideable-objects.aseprite  platforms.aseprite  powerups.aseprite  sprites.aseprite  stars.aseprite
built-to-scale/src/: game.rs  main.rs  mission_logs.rs  resources.rs  scenes.rs
built-to-scale/src/scenes/: game.rs  state.rs
built-to-scale/src/scenes/game/: powerups.rs
map/: Cargo.toml  build.rs  collideable-objects.tsx  map.tmx  planets.tsx  planets2.tsx  platforms.tsx
map-compiler/: Cargo.toml
map-compiler/src/: collider_extract.rs  lib.rs  maptile_extract.rs  scroll_stop.rs  spiral.rs
map/src/: lib.rs  spiral.rs
player/: .gitignore  package-lock.json  package.json  tsconfig.json
player/public/: index.html  mgba.wasm
player/src/: app.tsx  index.tsx
player/src/components/mgba/: bindings.tsx  mgba.tsx  mgbaWrapper.tsx
player/src/components/mobileController/: mobileController.tsx
sfx/: Cargo.toml  enacostione_-_spacecraft.xm  ground.xm  space.xm  space_intro.xm
sfx/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
