[package]
name = "built-to-scale"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
agb = { path = "../../agb/agb" }
util = { path = "../util", features = ["agb"] }
map = { path = "../map" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[workspace]
