[package]
name = "built-to-scale"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
agb = { version = "0.21.0" }
agb_tracker = { version = "0.21.0" }
util = { path = "../util", features = ["agb"] }
map = { path = "../map" }

sfx = { path = "../sfx" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[workspace]
